<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".health_calculator">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/back" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:background="#0083BF"
                android:text="@string/body_mass_index"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:background="#E91E63"
                android:text="@string/daily_calories_need"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:background="#0083BF"
                android:text="@string/target_heart_rate"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="122dp"
                android:background="#E91E63"
                android:text="@string/blood_donation"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:background="#0083BF"
                android:text="@string/water_intake"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="121dp"
                android:background="#E91E63"
                android:text="@string/ideal_weight"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>