<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".color">
    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/seven"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/seven"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/four" />

            <RadioButton
                android:id="@+id/nine"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/nine"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/eight"
                app:layout_constraintTop_toBottomOf="@+id/six" />

            <RadioButton
                android:id="@+id/eight"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/eight"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/seven"
                app:layout_constraintTop_toBottomOf="@+id/five" />

            <RadioButton
                android:id="@+id/four"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/four"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/seven"
                app:layout_constraintEnd_toStartOf="@+id/five"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/one" />

            <RadioButton
                android:id="@+id/six"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/six"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/five"
                app:layout_constraintTop_toBottomOf="@+id/three" />

            <RadioButton
                android:id="@+id/five"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/five"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/eight"
                app:layout_constraintStart_toEndOf="@+id/four"
                app:layout_constraintTop_toBottomOf="@+id/two" />

            <RadioButton
                android:id="@+id/one"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:text="@string/one"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/two"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/two"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/one"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/three"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="30dp"
                android:text="@string/three"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/six"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/two"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </RadioGroup>

    <ImageView
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/color1" />

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#0083BF"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>